--- a/.travis.yml
+++ b/.travis.yml
@@ -22,25 +22,25 @@
 
 #
 # Template #1: General project. Test it using existing `platformio.ini`.
-#
-
-# language: python
-# python:
-#     - "2.7"
-#
-# sudo: false
-# cache:
-#     directories:
-#         - "~/.platformio"
-#
-# install:
-#     - pip install -U platformio
-#
-# script:
-#     - platformio run
 
 
-#
+ language: python
+ python:
+     - "2.7"
+
+ sudo: false
+ cache:
+     directories:
+         - "~/.platformio"
+
+ install:
+     - pip install -U platformio
+
+ script:
+     - platformio run
+
+
+
 # Template #2: The project is intended to by used as a library with examples
 #
 
