Small changes to help w/ compass and MKR1000

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,3 +11,8 @@
 platform = atmelavr
 framework = arduino
 board = leonardo
+
+[env:mkr1000USB]
+platform = atmelsam
+board = mkr1000USB
+framework = arduino
