--- a/platformio.ini
+++ b/platformio.ini
@@ -7,12 +7,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:leonardo]
-platform = atmelavr
-framework = arduino
-board = leonardo
-
 [env:mkr1000USB]
 platform = atmelsam
 board = mkr1000USB
 framework = arduino
+lib_deps =
+  13
